After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 644570 - handles with a background image don't work
handles with a background image don't work
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Class: GtkStyleContext
3.0.x
Other Linux
: Normal normal
: ---
Assigned To: Carlos Garnacho
gtk-bugs
Depends on:
Blocks: 644572
 
 
Reported: 2011-03-12 16:16 UTC by Carlos Garcia Campos
Modified: 2011-03-13 01:34 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
themingengine: Use render_background_internal() to render handle background (2.22 KB, patch)
2011-03-12 16:16 UTC, Carlos Garcia Campos
accepted-commit_now Details | Review

Description Carlos Garcia Campos 2011-03-12 16:16:19 UTC
Created attachment 183216 [details] [review]
themingengine: Use render_background_internal() to render handle background

gtk_theming_engine_render_handle() ignores background-image using always background_color. this breaks the handles used by gnome-panel applets when the panel is transparent or has a background image.
Attached patch uses render_background_internal() to draw the background of handles.
Comment 1 Matthias Clasen 2011-03-12 18:54:28 UTC
Looks good to me, in principle. Carlos ?
Comment 2 Carlos Garnacho 2011-03-12 19:02:34 UTC
Comment on attachment 183216 [details] [review]
themingengine: Use render_background_internal() to render handle background

Definitely makes sense